Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,10 +11,18 @@ pool:
 
 steps:
 - script: |
-    echo Hello, world!
-  displayName: 'Run a one-line script'
+    docker run --rm ghcr.io/aquasecurity/trivy:latest -f template --template "@contrib/html.tpl" image python:slim > output.html
+  displayName: 'Run Trivy vulnerablity scan'
 
 # - script: |
 #     echo Add other tasks to build, test, and deploy your project.
 #     echo See https://aka.ms/yaml
 #   displayName: 'Run a multi-line script'
+- task : PublishTestResult@2
+  inputs: 
+   testResultsFormat: 'html'
+   testResultsFiles: **/output.html
+   mergeTestResults: true
+   failTaskOnFailedTests: false
+   testRunTitle: 'Trivy -Vulnerabilities scan'
+  condition: 'always()'
